# AITutorial

./: CMakeLists.txt  CreateData.py  Images.txt  model.pb
MNISTmodel/: saved_model.pb
MNISTmodel/variables/: variables.index
checkpoint/: train.ckpt.index
cmake/: FindJANA.cmake
include/: Model.h  Tensor.h
src/: CMakeLists.txt  Model.cpp  QuickTutorial.cc  QuickTutorialProcessor.cc  QuickTutorialProcessor.h  RandomSource.cc  RandomSource.h  Tensor.cpp
tests/: CMakeLists.txt  IntegrationTests.cc
